--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "description": "NO desc?",
   "main": "app.js",
   "scripts": {
-    "test": "ping"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "TheOnlyArtz",
   "license": "MIT",
   "dependencies": {
     "chalk": "^2.0.1",
     "common-tags": "^1.4.0",
-    "discord.js": "^11.1.0",
+    "discord.js": "^11.3.0",
     "google": "^2.1.0",
     "moment": "^2.18.1",
     "overwatch-stats": "^3.0.2",
-    "winston": "^2.3.1"
-  }
+    "winston": "^2.3.1",
+  },
+    "repository": {
+    "type": "git",
+    "url": "git+:https://github.com/ShanuMaurya/Artz-Self-Bot.git"
+    }
 }
