--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "NO desc?",
   "main": "app.js",
   "scripts": {
-    "test": "ping"
+    "test": "ping",
+    "test": "echo \"Error: no test specified\" && exit 1",
+
+    "start": "node app.js"
   },
   "author": "TheOnlyArtz",
   "license": "MIT",
