--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.0.1",
   "description": "NO desc?",
   "main": "app.js",
+    "engines": {
+    "node": "8.x",
+    "npm": "*"
+   },
   "scripts": {
     "test": "ping",
-    "test": "echo \"Error: no test specified\" && exit 1",
-
+    "test": "echo \"Error: no test specified\" && exit 1"
     "start": "node app.js"
   },
   "author": "TheOnlyArtz",
   "license": "MIT",
+  "
   "dependencies": {
     "chalk": "^2.0.1",
     "common-tags": "^1.4.0",
